OAuth integration with Gicar (#38)
* Added gicar to application.yml
* Implementing gicar authentication
* Fixed check database
* Rearrange check user
* Rearrange servlet
* Implementing Gicar authentication
* Change default value secret_id
* Added env variables in docker-compose